# 20Sp-CALab

./: CMakeLists.txt  README.md  hellomp.c  hellomp.out  helloworld  helloworld.cpp  main.cpp  mat  mat.cpp  mat2.c  mat3.c  mat4.cpp  my.cpp  omp_pi.cpp  pall2pimed.c  pall2pimed.cpp  pall3pimed.cpp  pallpimed.cpp  pi.cpp  pimed.cpp  pisource.cpp
